# winniedapooh

./: .gitignore  DOCUMENTATION.txt  README.md  TESTING_COMPLETE.md  TESTING_REPORT.md  pyproject.toml
data/: results.db
data/splits/stress_test/: splits.parquet
dataobject/: dataset.py  io_hygiene.py  splits.py
dataobject/tasks/: base.py  predict_week_out.py  resolve_binary.py
docs/: kalshi_docs.yaml
methods/: base.py  mlp_forecaster.py  registry.py
methods/baselines/: last_price.py  random_baseline.py
runner/: evaluator.py  experiment.py  result_store.py  results_db.py  runner.py
scripts/: build_db.py  inspect_parquet.py  smoke_dataset_load.py  smoke_task_examples.py  test_metaculus_rotation.py
scripts/results/: README.md  compare_runs.py  list_runs.py  plot_results.py  scan_existing_runs.py
src/: build_unified_parquet.py
src/common/: config.py  http.py  logging.py  parquet.py  schema.py
src/kalshi/: bulk_grabber.py  grabber.py  map_to_canonical.py
src/metaculus/: grabber.py  map_to_canonical.py
src/winniedapooh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  code_quality_review.py  conftest.py  e2e_test.sh  run_tests.py  test_data_correctness.py  test_edge_cases.py  test_pipeline_idempotency.py  test_results_db.py  test_results_integration.py  test_utils.py
